# email-dkim-verifier-contract

./: .gitignore  Cargo.toml  README.md  env.example  justfile
.github/workflows/: ci.yml  deploy-vite-example.yml  deploy.yml  publish-worker-wasm.yml
docs/: dkim-verification.md  limitations.md  outlayer-email-ciphertexts.md  request_id.md  tee-secrets.md
email-dkim-verifier-contract/: Cargo.toml  README.md  build.sh
email-dkim-verifier-contract/src/: lib.rs  onchain_verify.rs  parsers.rs  tee_verify.rs  verify_dkim.rs
email-dkim-verifier-contract/src/onchain_verify/: dkim.rs  mod.rs  parsers.rs
email-dkim-verifier-contract/tests/: dkim_verifier_tests.rs  request_id_clearing.rs  request_id_unit_tests.rs  verification_result_mapping_tests.rs
email-dkim-verifier-contract/tests/data/: gmail_reset_full.eml
examples/vite/: Caddyfile  env.example  index.html  package.json  pnpm-lock.yaml  vite-env.d.ts  vite.config.ts  wallet.vite.config.ts
examples/vite/src/: index.css  main.tsx
examples/vite/src/components/: ContractsCard.tsx  Layout.tsx  Output.tsx  Step1RegisterOrLogin.tsx  Step2SetRecoveryEmails.tsx  Step3Logout.tsx  Step4RecoverWithEmail.tsx  Step5TestTransfer.tsx
examples/vite/src/hooks/: safeJson.ts  useOutputLog.ts
examples/vite/src/pages/: HomePage.tsx
examples/vite/src/utils/: errors.ts  nearExplorer.ts
scripts/: deploy-dev.sh  deploy.sh  migrate.sh  request_email_verification.sh  rotate_outlayer_keys.sh  set_outlayer_keys.sh  set_outlayer_worker_wasm.sh  set_outlayer_worker_wasm_from_r2_object.sh  tests.sh  upgrade-dev.sh  upgrade.sh
src/: README.md  api.rs  crypto.rs  dns.rs  main.rs  parsers.rs  verify_dkim.rs
src/tests/: crypto.rs  mod.rs  verify_encrypted_dkim.rs
worker-build/: README.md  build.sh
