[package]
name = "dkim-verifier-contract"
version = "0.2.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasi-http-client = { version = "0.2.1", features = ["json"] }
base64 = "0.13"
rsa = { version = "0.10.0-rc.10", default-features = false, features = ["sha2", "encoding"] }
chacha20poly1305 = "0.10"
rand = "0.8"
hkdf = "0.12"
sha2 = "0.10"
x25519-dalek = "1"

[[bin]]
name = "email-dkim-verifier-contract"
path = "src/main.rs"
