[package]
name = "email-dkim-verifier-contract"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.17.2" }
borsh = "1.5"
base64 = "0.13"
rsa = { version = "0.10.0-rc.10", default-features = false, features = ["sha2", "encoding"] }

[features]
unit-testing = ["near-sdk/unit-testing"]
