[package]
name = "email-dkim-verifier-contract"
version = "0.1.0"
edition = "2021"
description = "email DKIM verifier contract"
repository = "https://github.com/web3-authn/dkim-verifier-contract"

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.14.1-rust-1.86.0"
image_digest = "sha256:eaac91be3119cc7c136b6f375f2d3e092001f717ed6151ccc9d5348c2d6a640c"
passed_env = []
# build commands inside of docker container
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.17.2" }
borsh = "1.5"
base64 = "0.13"
rsa = { version = "0.10.0-rc.10", default-features = false, features = ["sha2", "encoding"] }

[features]
unit-testing = ["near-sdk/unit-testing"]
