[package]
name = "email-dkim-verifier-contract"
version = "0.1.0"
edition = "2021"
description = "email DKIM verifier contract"
repository = "https://github.com/web3-authn/dkim-verifier-contract"

[package.metadata.near.reproducible_build]
image = "sourcescan/cargo-near:0.16.2-rust-1.86.0"
image_digest = "sha256:74c24d4d912f893198b8b13e01d43e0f78f3b00b3df45bf555a707eb4918a54e"
passed_env = []
container_build_command = [
    "cargo",
    "near",
    "build",
    "non-reproducible-wasm",
    "--locked",
]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
near-sdk = { version = "5.17.2" }
borsh = "1.5"
base64 = "0.13"
rsa = { version = "0.10.0-rc.10", default-features = false, features = ["sha2", "encoding"] }
schemars = "0.8"


[features]
unit-testing = ["near-sdk/unit-testing"]
